# computable

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN_NOTES.md  EXPERIMENTS.md  EXPERIMENT_RESULTS.md  LICENSE  PERF_LOG.md  README.md  SPEC_PI_IMPLEMENTATION.md  STYLE.md  TODOS.md  clippy.toml  concurrency-options.md  concurrency.md
.claude/commands/: cov.md  do-todo.md  spec-implementation-compare.md  test-cleanup.md  todo-update.md  use-types-for-safety.md
.github/scripts/: benchmark_history.py  compare_benchmarks.py  compare_time_benchmarks.py
.github/workflows/: bench-lite.yml  ci.yml
.mngr/: Dockerfile  settings.toml
benches/: asymmetric_convergence.rs  bench_macros.rs  common.rs  complex.rs  integer_roots.rs  inv.rs  pi.rs  sin.rs  summation.rs  summation_criterion.rs  targeted.rs
benchmarks/: Cargo.toml  README.md  benchmarks.rs  pi_benchmark.rs  profile.rs  profile_detailed.rs  profile_refinement.rs  profile_threadpool.rs  results.md
benchmarks/src/: balanced_sum.rs  common.rs  complex.rs  demand.rs  integer_roots.rs  inv.rs  main.rs  pi.rs  (+2 more)
docs/: pub-sub-refinement-experiment.md
examples/: analysis.rs
results/: latest.json
scripts/: bench-lite.sh
src/: README.md  binary.rs  computable.rs  concurrency.rs  error.rs  finite_interval.rs  legacy.rs  lib.rs  node.rs  normalized.rs  ops.rs  ordered_pair.rs  prefix.rs  refinement.rs  sane.rs  test_utils.rs
time-comparisons/: 1939d6c9179e76e7dd0c7a77250987e9b3b4e328_vs_65d9ccdd98edc3c8452dfa8766e9ab98ec898c51.json  2a402e101478bcaa6bb8a2c0c8bb0f4f372321be_vs_d20e0767378b6600486d27210600fd91b5589585.json  31873f2e2721740c1d1e6544a0b9cffde4d99ad1_vs_a39564c0425f7bb728bf8cdf822d848f172a7a5f.json  5528739ab9722b7bf514ddf0edbed316f39c97e5_vs_a9c8e384cd4218a27f4ebc38b6c40f1beae0ae7c.json  5eec34a33596491462fcedc44b9b4fd374b87103_vs_1939d6c9179e76e7dd0c7a77250987e9b3b4e328.json  613baae46f61aa4cb57e7b682559d601a3862673_vs_e7b59651f7628f628df331b2284f7bff48417283.json  65d9ccdd98edc3c8452dfa8766e9ab98ec898c51_vs_31873f2e2721740c1d1e6544a0b9cffde4d99ad1.json  73f12b57617fb46767f5b7005884ae10f309402a_vs_bcea117dd0554c24119eb480bacc61112a5e9e07.json  a39564c0425f7bb728bf8cdf822d848f172a7a5f_vs_613baae46f61aa4cb57e7b682559d601a3862673.json  a4b4fb73c570c5102f2a1ffb6d8b521295489f03_vs_5eec34a33596491462fcedc44b9b4fd374b87103.json  a9c8e384cd4218a27f4ebc38b6c40f1beae0ae7c_vs_73f12b57617fb46767f5b7005884ae10f309402a.json  bcea117dd0554c24119eb480bacc61112a5e9e07_vs_2a402e101478bcaa6bb8a2c0c8bb0f4f372321be.json  d20e0767378b6600486d27210600fd91b5589585_vs_e55af178a55c22a1bdb520e884132fd60fa4399a.json  e55af178a55c22a1bdb520e884132fd60fa4399a_vs_a4b4fb73c570c5102f2a1ffb6d8b521295489f03.json
(+21 files in other folders)
