[package]
name = "computable"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.12"
rand = "0.8"

[features]
benchmarks = []

[[bin]]
name = "benchmarks"
path = "benchmarks/benchmarks.rs"
required-features = ["benchmarks"]
