[package]
name = "computable"
version = "0.1.0"
edition = "2024"
description = "Computable real numbers with guaranteed correctness via interval refinement"
license = "MIT"
repository = "https://github.com/evgunter/computable"
readme = "README.md"
keywords = ["computable", "exact-arithmetic", "interval", "real-numbers"]
categories = ["mathematics", "science"]
autobenches = false

[features]
criterion-bench = []

[dependencies]
crossbeam-channel = "0.5"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
criterion = "0.8.2"
gungraun = "0.17.2"

[[bench]]
name = "complex"
harness = false

[[bench]]
name = "summation"
harness = false

[[bench]]
name = "integer_roots"
harness = false

[[bench]]
name = "inv"
harness = false

[[bench]]
name = "sin"
harness = false

[[bench]]
name = "pi"
harness = false

[[bench]]
name = "asymmetric_convergence"
harness = false

[lints.clippy]
# These lints apply to all targets (lib, examples, benches).
# The lib promotes them to deny via lib.rs; examples/benches just get warnings.
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
dbg_macro = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"
let_underscore_must_use = "warn"
arithmetic_side_effects = "warn"
impl_trait_in_params = "warn"
field_scoped_visibility_modifiers = "warn"
as_conversions = "warn"
lossy_float_literal = "warn"
default_numeric_fallback = "warn"
map_err_ignore = "warn"
missing_asserts_for_indexing = "warn"
undocumented_unsafe_blocks = "warn"
missing_transmute_annotations = "deny"
enum_glob_use = "deny"

[lints.rust]
let_underscore_drop = "deny"
